[package]
name = "twitterVideodl"
version = "0.1.0"
authors = ["nima <neemaiox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.126"
lazy_static = "1.4.0"
regex = "1"
diesel = { version = "1.4.4", features = ["postgres"] }
rand = "0.8.5"